@@ -102,6 +102,7 @@ INCLUDE 'ui-header.html'
               { value = 'A', text = text('Asset') }
               { value = 'L', text = text('Liability') }
               { value = 'Q', text = text('Equity') }
+              { value = 'Qt', text = text('Equity (Temporary)') } #'
               { value = 'I', text = text('Income') }
               { value = 'E', text = text('Expense') }
         ];  
