@@ -9,3 +9,7 @@ BEGIN;
 ALTER TABLE makemodel ADD barcode TEXT;
 
 COMMIT;
+
+BEGIN;
+ALTER TABLE account ADD COLUMN is_temp BOOL NOT NULL DEFAULT FALSE;
+COMMIT;
